--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ body, #navbar, .main-section {
     justify-content: center;
 }
 
+/* Main Header */
+#main-header {
+    background-color: dimgray;
+    padding: 20px 0;
+    text-align: center;
+    width: 100%;
+}
+
 /* Navigation */
 #nav-div {
     height: 25vh;
@@ -20,13 +28,6 @@ body, #navbar, .main-section {
 
 #navbar {
     margin: 0 auto;
-}
-
-#nav-header {
-    background-color: dimgray;
-    padding: 20px 0;
-    text-align: center;
-    width: 100%;
 }
 
 .nav-link {
@@ -41,4 +42,19 @@ body, #navbar, .main-section {
 
 .nav-link:nth-child(even) {
     background-color: grey;
+}
+
+/* Media Queries */
+@media only screen and (min-width: 700px) {
+    body {
+        flex-direction: row;
+        align-items: stretch;
+        justify-content: flex-start;
+    }
+
+    /* Navigation */
+    #nav-div {
+        height: 100vh;
+        width: 250px;
+    }
 }
