Adjust justify-content for #header-nav in @media

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body, #header-nav, #navbar, .main-section {
 
     /* Header - Nav */
     #header-nav {
+        justify-content: flex-start;
         height: 100vh;
         position: fixed;
         width: 250px;
