--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body, #header-nav, #navbar  {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 35px 25px;
+    padding: 17px 25px;
     width: 100%;
 }
 
@@ -79,11 +79,16 @@ body, #header-nav, #navbar  {
 }
 
 .main-section p {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 20px;
+    padding: 10px 15px;
 }
 
+.main-section ul {
+    padding: 10px 50px 0 50px;
+}
+
+.main-section ul li {
+    padding: 10px 0;
+}
 
 /* Media Queries */
 @media only screen and (min-width: 700px) {
