--- a/style.css
+++ b/style.css
@@ -90,6 +90,13 @@ body, #header-nav, #navbar  {
     padding: 10px 0;
 }
 
+code {
+    background-color: lightgoldenrodyellow;
+    border-left: 5px solid black;
+    margin: 5px 0 5px 30px;
+    padding: 20px;
+}
+
 /* Media Queries */
 @media only screen and (min-width: 700px) {
     body {
